src/test/deca/lexicographie/invalid/sansObjet/invalid_caracter5.deca
{
    float x = 0.2666;
    println("Hello");
    [
}